force-app/main/default/objects/Battle_Station3__c/Battle_Station3__c.object-meta.xml
<CustomObject>
    <label>Battle Station3</label>
    <nameField>
        <label>Battle Station Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Battle Station3s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>