force-app/main/default/objects/Battle_Station3__c/fields/Resource_count__c.field-meta.xml
<CustomField>
    <fullName>Resource_count__c</fullName>
    <label>Resource count</label>
    <summaryForeignKey>Resource3__c.Battle_Station__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>