force-app/main/default/objects/Battle_Station3__c/fields/Supply_Max__c.field-meta.xml
<CustomField>
    <fullName>Supply_Max__c</fullName>
    <label>Supply Max</label>
    <summarizedField>Supply3__c.Quantity__c</summarizedField>
    <summaryForeignKey>Supply3__c.Battle_Station__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>