force-app/main/default/objects/Battle_Station3__c/fields/Weapon_Status__c.field-meta.xml
<CustomField>
    <fullName>Weapon_Status__c</fullName>
    <label>Weapon Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Operational</fullName>
                <default>true</default>
                <label>Not Yet Operational</label>
            </value>
            <value>
                <fullName>Fully Operational</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>